# loonieVision

./: .gitignore  .oxfmtrc.jsonc  AGENTS.md  LICENSE  README.md  RELEASE.md  package-lock.json  package.json  plan.md  vite.config.ts  vitest.config.ts
.github/workflows/: build-test.yml  ci.yml  release.yml
scripts/: bump-version.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HlsPlayer.test.tsx  HlsPlayer.tsx  KeyboardShortcultsHelp.test.tsx  KeyboardShortcultsHelp.tsx  LoginModal.test.tsx  LoginModal.tsx  Viewport.test.tsx  Viewport.tsx
src/components/StreamSelector/: StreamCard.test.tsx  StreamCard.tsx  StreamSelector.test.tsx  StreamSelector.tsx  StreamThumbnail.test.tsx  StreamThumbnail.tsx
src/components/VideoGrid/: VideoGrid.test.tsx  VideoGrid.tsx  getVideoGridClass.test.ts  getVideoGridClass.ts
src/lib/: keyboardShortcuts.test.ts  keyboardShortcuts.ts
src/store/: audioStore.test.ts  audioStore.ts  authStore.test.ts  authStore.ts  streamStore.test.ts  streamStore.ts  uiStore.test.ts  uiStore.ts  viewportStore.test.ts  viewportStore.ts
src/test/: setup.ts
src/types/: index.ts
