[package]
name = "loonievision"
version = "1.0.0"
description = "Multi-viewer for CBC GEM Olympic streams"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/loonievision"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "loonievision_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-oauth = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
chrono = "0.4.43"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
